demo-authorization/authorization-policy/authorization-policy.yaml
apiVersion: security.istio.io/v1beta1
kind: AuthorizationPolicy
metadata:
  name: test-authorization-policy
spec:
  selector:
    matchLabels:
      app: test-nginx
  action: ALLOW
  rules:
  - to:
    - operation:
        paths:
        - "/test/*"
        methods:
        - GET
    - operation:
        paths:
        - "*/info"
        methods:
        - GET
    when:
    - key: request.headers[user-agent]
      values:
      - "GoogleStackdriverMonitoring-UptimeChecks(https://cloud.google.com/monitoring)"
